--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
-<H1>title</H1>
+<H1><html>
+
+<body bgcolor="#d0d0d0">
+
+<p>
+这是段落。这是段落。这是段落。这是段落。这是段落。这是段落。这是段落。这是段落。这是段落。这是段落。
+</p>
+
+<p>
+这是另一个段落。这是另一个段落。这是另一个段落。这是另一个段落。这是另一个段落。这是另一个段落。这是另一个段落。
+</p>
+
+</body>
+</html>
+</H1>
 <body>
 <p>
 hello world
