--- a/index.html
+++ b/index.html
@@ -1,20 +1,16 @@
-<H1><html>
-
+<H1>
 <body bgcolor="#d0d0d0">
-
 <p>
-这是段落。这是段落。这是段落。这是段落。这是段落。这是段落。这是段落。这是段落。这是段落。这是段落。
+旧时茅店社林边，路转溪头忽见。
 </p>
-
 <p>
-这是另一个段落。这是另一个段落。这是另一个段落。这是另一个段落。这是另一个段落。这是另一个段落。这是另一个段落。
+换种心境*。*
 </p>
-
 </body>
 </html>
 </H1>
 <body>
 <p>
-hello world
+Hello World~
 </p>
 </body>
